# opengltraining

./: CMakeLists.txt
src/: main.cpp
src/renderer/: Fshader.fs  Fshader.txt  ShaderProgram.cpp  ShaderProgram.h  Vshader.txt  Vshader.vs
